--- a/training/rl-with-llms-in-2025-dpo.ipynb
+++ b/training/rl-with-llms-in-2025-dpo.ipynb
@@ -52,20 +52,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install Pytorch & other libraries\n",
-    "%pip install \"torch==2.4.1\" tensorboard  \"setuptools<71.0.0\" openai \"lm-eval[api]==0.4.5\"\n",
+    "# Install Pytorch & other libraries, make sure to match your GPU driver version\n",
+    "%pip install \"torch==2.5.1\" vllm tensorboard  \"setuptools<71.0.0\" openai \"lm-eval[api]==0.4.5\"  --index-url https://download.pytorch.org/whl/cu121\n",
     "\n",
-    "# Install vLLM\n",
-    "%pip install vllm flash-attn\n",
+    "# Install flash-attn\n",
+    "%pip install flash-attn \n",
     "\n",
     "# Install Hugging Face libraries\n",
     "%pip install  --upgrade \\\n",
-    "  \"transformers==4.48.0\" \\\n",
+    "  \"transformers==4.48.1\" \\\n",
     "  \"datasets==3.1.0\" \\\n",
-    "  \"accelerate==1.1.1\" \\\n",
-    "  \"bitsandbytes==0.44.1\" \\\n",
-    "  \"peft==0.13.2\" \\\n",
-    "  \"hf-transfer==0.1.8\"\n",
+    "  \"accelerate==1.3.0\" \\\n",
+    "  \"bitsandbytes==0.45.0\" \\\n",
+    "  \"peft==0.14.0\" \\\n",
+    "  \"hf-transfer==0.1.9\"\n",
     "\n",
     "# Install TRL and Liger Kernels from git as not yet released\n",
     "%pip install git+https://github.com/huggingface/trl.git@liger-dpo\n",
@@ -108,10 +108,10 @@
     "I prepared [create_preference_dataset.py](./scripts/dpo/create_preference_dataset.py) script to generate the dataset. The dataset will be saved to the Hugging Face Hub. We are going to generate 4 solutions for each input hoping to have at least one correct solution and one incorrect solution. If we don't have a pair we will skip the input.\n",
     "\n",
     "```python\n",
-    "python scripts/dpo/create_preference_dataset.py --dataset_id philschmid/DMath --sample_size 5000 --generation_model_name_or_path philschmid/llama-3-1-8b-math-orca-spectrum-10k-ep1 --num_solutions 4 --batch_size 8 \n",
+    "python scripts/dpo/create_preference_dataset.py --dataset_id philschmid/DMath --sample_size 5000 --generation_model_name_or_path philschmid/llama-3-1-8b-math-orca-spectrum-10k-ep1 --num_solutions 4 --batch_size 16 \n",
     "```\n",
     "\n",
-    "_Note: You can skip this step and used the generated preference dataset from me [philschmid/philschmid-llama-3-1-8b-math-orca-spectr-philschmid-DMath-candidates](https://huggingface.co/philschmid/philschmid-llama-3-1-8b-math-orca-spectr-philschmid-DMath-candidates)_"
+    "_Note: You can skip this step and used the generated preference dataset from me [philschmid/philschmid-llama-3-1-8b-math-orca-spectr-philschmid-DMath-candidates](https://huggingface.co/philschmid/philschmid-llama-3-1-8b-math-orca-spectr-philschmid-DMath-candidates). It includes 1.9k prefence pairs._"
    ]
   },
   {
@@ -339,7 +339,7 @@
     "from openai import OpenAI\n",
     "\n",
     "# create client \n",
-    "client = OpenAI(base_url=\"http://localhost:8080/v1\",api_key=\"-\")\n",
+    "client = OpenAI(base_url=\"http://localhost:8000/v1\",api_key=\"-\")\n",
     "\n",
     "system_message = \"\"\"Solve the given high school math problem by providing a clear explanation of each step leading to the final solution.\n",
     "\n",
@@ -365,7 +365,8 @@
     "\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": system_message},\n",
-    "    {\"role\": \"user\", \"content\": \"If you converted $140 to 158760 Korean Won, how much is $1 in Korean Won?\"},\n",
+    "    # {\"role\": \"user\", \"content\": \"If you converted $140 to 158760 Korean Won, how much is $1 in Korean Won?\"},\n",
+    "    {\"role\": \"user\", \"content\": \"Q: Henry and 3 of his friends order 7 pizzas for lunch. Each pizza is cut into 8 slices. If Henry and his friends want to share the pizzas equally, how many slices can each of them have?\\nA:\"},\n",
     "    # {\"role\": \"user\", \"content\": \"The rectangular-shaped cell phone is 9 centimeters (cm) wide and 46 centimeters (cm) in circumference. Find the vertical length of the cell phone?\"},\n",
     "]\n",
     "expected_answer = \"14\"\n",
@@ -374,7 +375,7 @@
     "# Take a random sample from the dataset and remove the last message and send it to the model\n",
     "\n",
     "response = client.chat.completions.create(\n",
-    "    model=\"orca\",\n",
+    "    model=\"philschmid/dpo-llama-3-1-8b-math-ep3-merged\",\n",
     "    messages=messages,\n",
     "    stream=False, # no streaming\n",
     "    max_tokens=1024,\n",
@@ -446,7 +447,7 @@
     "\n",
     "!lm_eval --model local-chat-completions \\\n",
     "  --tasks gsm8k_cot \\\n",
-    "  --model_args model=philschmid/dpo-llama-3-1-8b-math-ep3-merged,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=10,tokenized_requests=False,timeout=180 \\\n",
+    "  --model_args model=philschmid/dpo-llama-3-1-8b-math-ep3-merged,base_url=http://localhost:8000/v1/chat/completions,num_concurrent=8,max_retries=10,tokenized_requests=False,timeout=180,max_length=4096 \\\n",
     "  --apply_chat_template \\\n",
     "  --fewshot_as_multiturn"
    ]
