--- a/training/rl-with-llms-in-2025-dpo.ipynb
+++ b/training/rl-with-llms-in-2025-dpo.ipynb
@@ -269,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55ab6ae17beaf668f7e3043d134eaf2512748985b4d6dee14de59473a4eb9a6a\n"
+      "08ead4545ed19b6836e2ad0939f91f06ceae99bd7833cc51dc70de4bf522e85e\n"
      ]
     }
    ],
@@ -294,15 +294,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vllm serve philschmid/dpo-llama-3-1-8b-math-ep3-merged --dtype auto \n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -313,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -325,13 +316,13 @@
       "Original Answer:\n",
       "14\n",
       "Generated Answer:\n",
-      "To find out how much $1 is in Korean Won, you can divide the total amount of Korean Won you converted by the amount in dollars you started with. \n",
+      "To find out how much $1 is in Korean Won, you can divide the total amount of Korean Won you received by the amount of dollars you converted.\n",
       "\n",
-      "So, you would divide 158760 Korean Won by $140.\n",
+      "So, you would divide 158760 Korean Won by the $140 you converted.\n",
       "\n",
-      "158760 Korean Won / $140 = 1134 Korean Won per dollar. \n",
+      "158760 KRW / $140 = 1134 KRW per $1\n",
       "\n",
-      "Therefore, $1 is equal to 1134 Korean Won.\n"
+      "Therefore, $1 is equivalent to 1134 Korean Won.\n"
      ]
     }
    ],
@@ -399,46 +390,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!lm_eval \\\n",
-    "  --model vllm \\\n",
-    "  --model_args pretrained=\"philschmid/dpo-llama-3-1-8b-math-ep3-merged\",dtype=auto,gpu_memory_utilization=0.4,add_bos_token=True,max_model_len=4096 \\\n",
-    "  --apply_chat_template \\\n",
-    "  --tasks gsm8k_cot \\\n",
-    "  --batch_size auto\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-01-22:09:24:12,482 INFO     [__main__.py:279] Verbosity set to INFO\n",
-      "2025-01-22:09:24:18,165 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
-      "2025-01-22:09:24:18,181 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
-      "2025-01-22:09:24:20,526 INFO     [__main__.py:376] Selected Tasks: ['gsm8k_cot']\n",
-      "2025-01-22:09:24:20,534 INFO     [evaluator.py:164] Setting random seed to 0 | Setting numpy seed to 1234 | Setting torch manual seed to 1234 | Setting fewshot manual seed to 1234\n",
-      "2025-01-22:09:24:20,534 INFO     [evaluator.py:201] Initializing local-chat-completions model, with arguments: {'model': 'philschmid/dpo-llama-3-1-8b-math-ep3-merged', 'base_url': 'http://localhost:8080/v1/chat/completions', 'num_concurrent': 8, 'max_retries': 10, 'tokenized_requests': False, 'timeout': 180}\n",
-      "2025-01-22:09:24:20,534 WARNING  [openai_completions.py:106] chat-completions endpoint requires the `--apply_chat_template` flag.\n",
-      "2025-01-22:09:24:20,535 INFO     [api_models.py:111] Using max length 2048 - 1\n",
-      "2025-01-22:09:24:20,535 INFO     [api_models.py:124] Using tokenizer None\n",
-      "2025-01-22:09:24:21,571 INFO     [task.py:415] Building contexts for gsm8k_cot on rank 0...\n",
-      "100%|██████████████████████████████████████| 1319/1319 [00:11<00:00, 111.43it/s]\n",
-      "2025-01-22:09:24:33,428 INFO     [evaluator.py:489] Running generate_until requests\n",
-      "Requesting API: 100%|███████████████████████| 1319/1319 [27:47<00:00,  1.26s/it]\n",
-      "2025-01-22:09:52:27,646 INFO     [evaluation_tracker.py:269] Output path not provided, skipping saving results aggregated\n",
+      "2025-01-22:19:47:40,923 INFO     [__main__.py:279] Verbosity set to INFO\n",
+      "2025-01-22:19:47:46,740 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
+      "2025-01-22:19:47:46,758 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
+      "2025-01-22:19:47:49,088 INFO     [__main__.py:376] Selected Tasks: ['gsm8k_cot']\n",
+      "2025-01-22:19:47:49,096 INFO     [evaluator.py:164] Setting random seed to 0 | Setting numpy seed to 1234 | Setting torch manual seed to 1234 | Setting fewshot manual seed to 1234\n",
+      "2025-01-22:19:47:49,096 INFO     [evaluator.py:201] Initializing local-chat-completions model, with arguments: {'model': 'philschmid/dpo-llama-3-1-8b-math-ep3-merged', 'base_url': 'http://localhost:8080/v1/chat/completions', 'num_concurrent': 8, 'max_retries': 10, 'tokenized_requests': False, 'timeout': 180}\n",
+      "2025-01-22:19:47:49,096 WARNING  [openai_completions.py:106] chat-completions endpoint requires the `--apply_chat_template` flag.\n",
+      "2025-01-22:19:47:49,097 INFO     [api_models.py:111] Using max length 2048 - 1\n",
+      "2025-01-22:19:47:49,097 INFO     [api_models.py:124] Using tokenizer None\n",
+      "2025-01-22:19:47:50,790 INFO     [task.py:415] Building contexts for gsm8k_cot on rank 0...\n",
+      "100%|██████████████████████████████████████| 1319/1319 [00:11<00:00, 115.71it/s]\n",
+      "2025-01-22:19:48:02,211 INFO     [evaluator.py:489] Running generate_until requests\n",
+      "Requesting API: 100%|███████████████████████| 1319/1319 [29:00<00:00,  1.32s/it]\n",
+      "2025-01-22:20:17:08,176 INFO     [evaluation_tracker.py:269] Output path not provided, skipping saving results aggregated\n",
       "local-chat-completions (model=philschmid/dpo-llama-3-1-8b-math-ep3-merged,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=10,tokenized_requests=False,timeout=180), gen_kwargs: (None), limit: None, num_fewshot: None, batch_size: 1\n",
       "|  Tasks  |Version|     Filter     |n-shot|  Metric   |   |Value |   |Stderr|\n",
       "|---------|------:|----------------|-----:|-----------|---|-----:|---|-----:|\n",
-      "|gsm8k_cot|      3|flexible-extract|     8|exact_match|↑  |0.6012|±  |0.0135|\n",
-      "|         |       |strict-match    |     8|exact_match|↑  |0.1501|±  |0.0098|\n",
+      "|gsm8k_cot|      3|flexible-extract|     8|exact_match|↑  |0.5936|±  |0.0135|\n",
+      "|         |       |strict-match    |     8|exact_match|↑  |0.1274|±  |0.0092|\n",
       "\n"
      ]
     }
@@ -456,12 +433,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wow, 60% accuracy with only using 10k samples is pretty good! We successfully validated that our model can solve math problems. Now, don't forget to stop your container once you are done."
+    "Wow, 60% accuracy with only using ~2k samples is pretty good start! We successfully validated that our model can solve math problems. Now, don't forget to stop your container once you are done."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
