--- a/training/rl-with-llms-in-2025-dpo.ipynb
+++ b/training/rl-with-llms-in-2025-dpo.ipynb
@@ -65,11 +65,8 @@
     "  \"accelerate==1.3.0\" \\\n",
     "  \"bitsandbytes==0.45.0\" \\\n",
     "  \"peft==0.14.0\" \\\n",
-    "  \"hf-transfer==0.1.9\"\n",
-    "\n",
-    "# Install TRL and Liger Kernels from git as not yet released\n",
-    "%pip install git+https://github.com/huggingface/trl.git@liger-dpo\n",
-    "%pip install git+https://github.com/kashif/Liger-Kernel.git@dpo-fix\n"
+    "  \"hf-transfer==0.1.9\" \\\n",
+    "  \"trl==0.13.0\""
    ]
   },
   {
@@ -125,7 +122,7 @@
     "\n",
     "We prepared a [run_dpo.py](./scripts/dpo/run_dpo.py) scripts, which supports providing a yaml configuration file. This allows you to easily change the model, dataset, hyperparameters, and other settings. This is done by using the `TrlParser`, which parses the yaml file and converts it into the `TrainingArguments` arguments. \n",
     "\n",
-    "Based on the [Alignment Handbook](https://github.com/huggingface/alignment-handbook) we know that we need to use a ~10-100x smaller learning rate for DPO compared to SFT. In our example we reduce the learning rate from 2e-4 (SFT) to 5e-6 (DPO) or 40x smaller. Another important parameter is the `beta` parameter, which is used to control the strength of the alignment, typically something in the range of 0.1 to 0.5. A higher beta means less divergence from the initial reference model or the text generations are very similar in terms of their probability distributions. "
+    "Based on the [Alignment Handbook](https://github.com/huggingface/alignment-handbook) we know that we need to use a ~10-100x smaller learning rate for DPO compared to SFT. In our example we reduce the learning rate from 2e-4 (SFT) to 5e-6 (DPO). Another important parameter is the `beta` parameter, which is used to control the strength of the alignment, typically something in the range of 0.1 to 0.5. A higher beta means less divergence from the initial reference model or the text generations are very similar in terms of their probability distributions. "
    ]
   },
   {
@@ -164,7 +161,7 @@
     "use_liger: false\n",
     "bf16: true\n",
     "tf32: true\n",
-    "output_dir: runs/dpo-llama-3-1-8b-math\n",
+    "output_dir: runs/dpo-llama-3-1-8b-math-ep3\n",
     "\n",
     "# Dataset arguments\n",
     "dataset_id_or_path: philschmid/philschmid-llama-3-1-8b-math-orca-spectr-philschmid-DMath-candidates\n",
@@ -174,24 +171,24 @@
     "load_in_4bit: true\n",
     "lora_target_modules: \"all-linear\"\n",
     "# important as we need to train the special tokens for the chat template of llama \n",
-    "# lora_modules_to_save: [\"lm_head\", \"embed_tokens\"] # you might need to change this for qwen or other models\n",
+    "lora_modules_to_save: [\"lm_head\", \"embed_tokens\"] # you might need to change this for qwen or other models\n",
     "lora_r: 16\n",
     "lora_alpha: 16\n",
     "\n",
     "# Training arguments\n",
     "beta: 0.1\n",
-    "max_length: 1024\n",
-    "max_prompt_length: 512\n",
+    "max_length: 1536\n",
+    "max_prompt_length: 768\n",
     "loss_type: sigmoid # default loss, alternatives: https://huggingface.co/docs/trl/dpo_trainer#loss-functions\n",
-    "num_train_epochs: 1\n",
-    "per_device_train_batch_size: 8\n",
-    "gradient_accumulation_steps: 2\n",
+    "num_train_epochs: 3\n",
+    "per_device_train_batch_size: 1 \n",
+    "gradient_accumulation_steps: 8\n",
     "gradient_checkpointing: true\n",
     "gradient_checkpointing_kwargs:\n",
     "  use_reentrant: false\n",
     "learning_rate: 5.0e-6 \n",
     "lr_scheduler_type: constant\n",
-    "warmup_ratio: 0.1\n",
+    "warmup_ratio: 0.03\n",
     "\n",
     "# Logging arguments\n",
     "logging_strategy: steps\n",
@@ -207,7 +204,9 @@
     "hub_strategy: every_save\n",
     "```\n",
     "\n",
-    "This config works for single-GPU training and for multi-GPU training with DeepSpeed (see Appendix for full command). "
+    "This config can be used for single-GPU training (~24GB GPU Memory), if you have more memory available you can increase the `per_device_train_batch_size` and for multi-GPU training with DeepSpeed (see Appendix for full \n",
+    "\n",
+    "_Note: I ran the script on 1x H100 with a batch size of 8 and 8 gradient accumulation steps. This took ~1 hours to complete._command). "
    ]
   },
   {
@@ -249,7 +248,7 @@
    "source": [
     "## 5. Test Model and run Inference\n",
     "\n",
-    "After the training is done we want to evaluate and test our model. As we trained our model on solving math problems, we will evaluate the model on [GSM8K](https://huggingface.co/datasets/openai/gsm8k) dataset. GSM8K (Grade School Math 8K) is a dataset of 8.5K high quality linguistically diverse grade school math word problems. The dataset was created to support the task of question answering on basic mathematical problems that require multi-step reasoning.\n",
+    "After the training is done we want to evaluate and test our model. Similar to our SFT model, we will evaluate the model on [GSM8K](https://huggingface.co/datasets/openai/gsm8k) dataset to see if it improved performance. GSM8K (Grade School Math 8K) is a dataset of 8.5K high quality linguistically diverse grade school math word problems. The dataset was created to support the task of question answering on basic mathematical problems that require multi-step reasoning.\n",
     "\n",
     "Evaluating Generative AI models is not a trivial task since 1 input can have multiple correct outputs. If you want to learn more about evaluating generative models, check out:\n",
     "* [Evaluate LLMs and RAG a practical example using Langchain and Hugging Face](https://www.philschmid.de/evaluate-llm).\n",
@@ -269,17 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "08ead4545ed19b6836e2ad0939f91f06ceae99bd7833cc51dc70de4bf522e85e\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -304,33 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query:\n",
-      "If you converted $140 to 158760 Korean Won, how much is $1 in Korean Won?\n",
-      "Original Answer:\n",
-      "14\n",
-      "Generated Answer:\n",
-      "To find out how much $1 is in Korean Won, you can divide the total amount of Korean Won you received by the amount of dollars you converted.\n",
-      "\n",
-      "So, you would divide 158760 Korean Won by the $140 you converted.\n",
-      "\n",
-      "158760 KRW / $140 = 1134 KRW per $1\n",
-      "\n",
-      "Therefore, $1 is equivalent to 1134 Korean Won.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "\n",
     "# create client \n",
-    "client = OpenAI(base_url=\"http://localhost:8000/v1\",api_key=\"-\")\n",
+    "client = OpenAI(base_url=\"http://localhost:8080/v1\",api_key=\"-\")\n",
     "\n",
     "system_message = \"\"\"Solve the given high school math problem by providing a clear explanation of each step leading to the final solution.\n",
     "\n",
@@ -390,41 +362,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-01-22:19:47:40,923 INFO     [__main__.py:279] Verbosity set to INFO\n",
-      "2025-01-22:19:47:46,740 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
-      "2025-01-22:19:47:46,758 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
-      "2025-01-22:19:47:49,088 INFO     [__main__.py:376] Selected Tasks: ['gsm8k_cot']\n",
-      "2025-01-22:19:47:49,096 INFO     [evaluator.py:164] Setting random seed to 0 | Setting numpy seed to 1234 | Setting torch manual seed to 1234 | Setting fewshot manual seed to 1234\n",
-      "2025-01-22:19:47:49,096 INFO     [evaluator.py:201] Initializing local-chat-completions model, with arguments: {'model': 'philschmid/dpo-llama-3-1-8b-math-ep3-merged', 'base_url': 'http://localhost:8080/v1/chat/completions', 'num_concurrent': 8, 'max_retries': 10, 'tokenized_requests': False, 'timeout': 180}\n",
-      "2025-01-22:19:47:49,096 WARNING  [openai_completions.py:106] chat-completions endpoint requires the `--apply_chat_template` flag.\n",
-      "2025-01-22:19:47:49,097 INFO     [api_models.py:111] Using max length 2048 - 1\n",
-      "2025-01-22:19:47:49,097 INFO     [api_models.py:124] Using tokenizer None\n",
-      "2025-01-22:19:47:50,790 INFO     [task.py:415] Building contexts for gsm8k_cot on rank 0...\n",
-      "100%|██████████████████████████████████████| 1319/1319 [00:11<00:00, 115.71it/s]\n",
-      "2025-01-22:19:48:02,211 INFO     [evaluator.py:489] Running generate_until requests\n",
-      "Requesting API: 100%|███████████████████████| 1319/1319 [29:00<00:00,  1.32s/it]\n",
-      "2025-01-22:20:17:08,176 INFO     [evaluation_tracker.py:269] Output path not provided, skipping saving results aggregated\n",
-      "local-chat-completions (model=philschmid/dpo-llama-3-1-8b-math-ep3-merged,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=10,tokenized_requests=False,timeout=180), gen_kwargs: (None), limit: None, num_fewshot: None, batch_size: 1\n",
-      "|  Tasks  |Version|     Filter     |n-shot|  Metric   |   |Value |   |Stderr|\n",
-      "|---------|------:|----------------|-----:|-----------|---|-----:|---|-----:|\n",
-      "|gsm8k_cot|      3|flexible-extract|     8|exact_match|↑  |0.5936|±  |0.0135|\n",
-      "|         |       |strict-match    |     8|exact_match|↑  |0.1274|±  |0.0092|\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "!lm_eval --model local-chat-completions \\\n",
     "  --tasks gsm8k_cot \\\n",
-    "  --model_args model=philschmid/dpo-llama-3-1-8b-math-ep3-merged,base_url=http://localhost:8000/v1/chat/completions,num_concurrent=8,max_retries=10,tokenized_requests=False,timeout=180,max_length=4096 \\\n",
+    "  --model_args model=philschmid/dpo-llama-3-1-8b-math-ep3-merged,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=10,tokenized_requests=False,timeout=180,max_length=4096 \\\n",
     "  --apply_chat_template \\\n",
     "  --fewshot_as_multiturn"
    ]
@@ -433,23 +377,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wow, 60% accuracy with only using ~2k samples is pretty good start! We successfully validated that our model can solve math problems. Now, don't forget to stop your container once you are done."
+    "Wow, 59% accuracy, thats a 5% improvement from our SFT model, using only ~2k preference pairs for 3 epochs. That shows that our script and config is working correctly. \n",
+    "\n",
+    "_Note: You might be able to achieve better results with more data, more epochs or tuning the hyperparameters (beta, learning rate, batch size, etc.). I ran some ablations on multi-gpu training and full training with DeepSpeed (see Appendix for full command) and achieved 65% accuracy._"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tgi\n",
-      "tgi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker stop tgi\n",
     "!docker rm tgi"
