--- a/training/rl-with-llms-in-2025-dpo.ipynb
+++ b/training/rl-with-llms-in-2025-dpo.ipynb
@@ -379,7 +379,7 @@
    "source": [
     "Wow, 59% accuracy, thats a 5% improvement from our SFT model, using only ~2k preference pairs for 3 epochs. That shows that our script and config is working correctly. \n",
     "\n",
-    "_Note: You might be able to achieve better results with more data, more epochs or tuning the hyperparameters (beta, learning rate, batch size, etc.). I ran some ablations on multi-gpu training and full training with DeepSpeed (see Appendix for full command) and achieved 65% accuracy._"
+    "_Note: You might be able to achieve better results with more data, more epochs or tuning the hyperparameters (beta, learning rate, batch size, etc.). I ran some ablations on multi-gpu training and full training with DeepSpeed (see Appendix for full command) and the best results was 62% accuracy._"
    ]
   },
   {
@@ -390,6 +390,22 @@
    "source": [
     "!docker stop tgi\n",
     "!docker rm tgi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Appendix\n",
+    "\n",
+    "_Note: Make sure to install deepspeed and accelerate before running the commands. `pip install deepspeed==0.15.4`_\n",
+    "\n",
+    "\n",
+    "## Distributed Training\n",
+    "\n",
+    "```bash\n",
+    "ACCELERATE_LOG_LEVEL=info accelerate launch --num_processes 4 --config_file configs/accelerate_configs/deepspeed_zero3.yaml scripts/dpo/run_dpo.py --config receipes/dpo-llama-3-1-8b.yaml\n",
+    "```"
    ]
   },
   {
