--- a/training/rl-with-llms-in-2025-dpo.ipynb
+++ b/training/rl-with-llms-in-2025-dpo.ipynb
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Test Model and run Inference\n",
+    "## 4. Test and evaluate the aligned model\n",
     "\n",
     "After the training is done we want to evaluate and test our model. Similar to our SFT model, we will evaluate the model on [GSM8K](https://huggingface.co/datasets/openai/gsm8k) dataset to see if it improved performance. GSM8K (Grade School Math 8K) is a dataset of 8.5K high quality linguistically diverse grade school math word problems. The dataset was created to support the task of question answering on basic mathematical problems that require multi-step reasoning.\n",
     "\n",
