--- a/training/recreate-deepseek-r1-aha-grpo.ipynb
+++ b/training/recreate-deepseek-r1-aha-grpo.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# Install Pytorch & other libraries, make sure to match your GPU driver version\n",
-    "%pip install \"torch==2.5.1\" vllm tensorboard  \"setuptools<71.0.0\"  --index-url https://download.pytorch.org/whl/cu121\n",
+    "%pip install \"torch==2.5.1\" tensorboard  \"setuptools<71.0.0\" vllm\n",
     "\n",
     "# Install flash-attn\n",
     "%pip install flash-attn \n",
@@ -70,7 +70,8 @@
     "  \"hf-transfer==0.1.9\" \n",
     "  \n",
     "# Install TRL from main branch \n",
-    "%pip install git+https://github.com/huggingface/trl.git@main --upgrade"
+    "%pip install git+https://github.com/huggingface/trl.git@grpo_vllm --upgrade\n",
+    "# %pip install git+https://github.com/vllm-project/vllm.git@68ad4e3a8d8a66fb2a43be57471ee13a8bec4ec0"
    ]
   },
   {
@@ -149,7 +150,7 @@
     "      },\n",
     "      { \n",
     "        \"role\": \"user\",\n",
-    "        \"content\": f\"Using the numbers {numbers}, create an equation that equals {target}. You can use basic arithmetic operations (+, -, *, /) and each number can only be used once. Show your work in <think> </think> tags. And return the final answer in <answer> </answer> tags, for example <answer> (1 + 2) / 3 </answer>.\"\n",
+    "        \"content\": f\"Using the numbers {numbers}, create an equation that equals {target}. You can use basic arithmetic operations (+, -, *, /) and each number can only be used once. Show your work in <think> </think> tags. And return the final equation and answer in <answer> </answer> tags, for example <answer> (1 + 2) / 3 = 1 </answer>.\"\n",
     "      },\n",
     "      {\n",
     "        \"role\": \"assistant\",\n",
@@ -188,24 +189,6 @@
     "2. Extracts the equation, splitting it into parts, executing the equation and comparing the result and comparing it to the target. \n",
     "\n",
     "_Note: Correct `<answer>` in our example includes the equation and the result, for example `<answer> 55 + 36 - 7 - 19 = 65 </answer>`_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'target': []}\n"
-     ]
-    }
-   ],
-   "source": [
-    "reward_kwargs = {key: [] for key in {\"prompt\":\"1\",\"completion\":\"2\",\"target\":3}.keys() if key not in [\"prompt\", \"completion\"]}\n",
-    "print(reward_kwargs)"
    ]
   },
   {
@@ -382,7 +365,18 @@
    ],
    "source": [
     "# Train and push the model to the Hub\n",
-    "trainer.train()"
+    "trainer.train()\n",
+    "# Save model\n",
+    "trainer.save_model(training_args.output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Note: Reinforcement Training is very slow and compute intensive. Running a single step on 1x L4 with Q-LoRA, Batch size of 1 and only 2 generations per samples takes >20 minutes._\n",
+    "\n",
+    "If you have access to multiple GPUs you can use the `accelerate` library and a prepared script [run_r1_grpo.py](https://github.com/huggingface/deep-learning-pytorch-huggingface/blob/main/training/scripts/run_r1_grpo.py) to train the model."
    ]
   },
   {
@@ -391,10 +385,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save and push to hub\n",
-    "trainer.save_model(training_args.output_dir)\n",
-    "if training_args.push_to_hub:\n",
-    "    trainer.push_to_hub(dataset_name=dataset_id)\n"
+    "# num_processes is the number of GPUs you have - 1 as this will be used with vLLM for Generation. \n",
+    "# The command below can be run on a Node with 2x H100 80GBs\n",
+    "!accelerate launch --num_processes 3 --config_file configs/accelerate_configs/deepspeed_zero3.yaml scripts/run_r1_grpo.py --config receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml"
    ]
   },
   {
