--- a/training/recreate-deepseek-r1-aha-grpo.ipynb
+++ b/training/recreate-deepseek-r1-aha-grpo.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,11 +212,13 @@
     "    rewards = []\n",
     "\n",
     "    for completion, gt in zip(completions, target):\n",
+    "\n",
     "      try:\n",
     "        # add synthetic <think> as its already part of the prompt and prefilled for the assistant to more easily match the regex\n",
     "        completion = \"<think>\" + completion\n",
+    "        \n",
     "        # Check if the format is correct\n",
-    "        regex = r\"^<think>([^<]*(?:<(?!/?think>)[^<]*)*)<\\/think><answer>([\\s\\S]*?)<\\/answer>$\"\n",
+    "        regex = r\"^<think>([^<]*(?:<(?!/?think>)[^<]*)*)<\\/think>\\n\\n<answer>([\\s\\S]*?)<\\/answer>$\"\n",
     "\n",
     "        match = re.search(regex, completion, re.DOTALL) \n",
     "        # if the format is not correct, reward is 0\n",
@@ -252,9 +254,7 @@
     "            rewards.append(0.0)\n",
     "            continue\n",
     "        # Extract the \"answer\" part from the completion\n",
-    "        answer_equation = match.group(1).strip()\n",
-    "        # Replace '×' with '*' for Python compatibility\n",
-    "        equation = answer_equation.replace(\"×\", \"*\")\n",
+    "        equation = match.group(1).strip()\n",
     "        # Extract all numbers from the equation\n",
     "        used_numbers = [int(n) for n in re.findall(r'\\d+', equation)]\n",
     "        \n",
@@ -262,16 +262,22 @@
     "        if sorted(used_numbers) != sorted(numbers):\n",
     "            rewards.append(0.0)\n",
     "            continue\n",
-    "        # Evaluate the equation and compare it to the target\n",
-    "        result = eval(equation)\n",
+    "        # Define a regex pattern that only allows numbers, operators, parentheses, and whitespace\n",
+    "        allowed_pattern = r'^[\\d+\\-*/().\\s]+$'\n",
+    "        if not re.match(allowed_pattern, equation):\n",
+    "           rewards.append(0.0)\n",
+    "           continue\n",
+    "        \n",
+    "        # Evaluate the equation with restricted globals and locals\n",
+    "        result = eval(equation, {\"__builtins__\": None}, {})\n",
     "        # Check if the equation is correct and matches the ground truth\n",
-    "        if float(result) == float(gt):\n",
+    "        if abs(float(result) - float(gt)) < 1e-5:\n",
     "            rewards.append(1.0)\n",
     "        else:\n",
     "            rewards.append(0.0)\n",
     "      except Exception:\n",
-    "          # If evaluation fails, reward is 0\n",
-    "          rewards.append(0.0)\n",
+    "            # If evaluation fails, reward is 0\n",
+    "            rewards.append(0.0) \n",
     "    return rewards"
    ]
   },
@@ -286,15 +292,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.0, 0.0, 0.0, 1.0]\n",
+      "[1.0, 1.0, 0.0, 0.0, 0.0]\n"
+     ]
+    }
+   ],
    "source": [
     "correct_sample_1 = \"\"\"We need to find an equation using the numbers 19, 36, 55, and 7\n",
     "exactly once, with basic arithmetic operations, that equals 65. One possible\n",
-    "combination is 55 + 36 - 19 + 7... </think><answer> 55 + 36 - 7 - 19 </answer>\"\"\"\n",
+    "combination is 55 + 36 - 19 + 7... </think>\n",
     "\n",
-    "correct_sample_2 = \"\"\" ... </think><answer> 55 + 36 - 7 - 19 </answer>\"\"\"\n",
+    "<answer> 55 + 36 - 7 - 19 </answer>\"\"\"\n",
+    "\n",
+    "correct_sample_2 = \"\"\" ... </think>\n",
+    "\n",
+    "<answer> 55 + 36 - 7 - 19 </answer>\"\"\"\n",
     "\n",
     "wrong_format = \"\"\"User: Using the numbers [19, 36, 55, 7], create an equation that equals 65.\"\"\"\n",
     "\n",
@@ -304,7 +323,9 @@
     "183 - 104 = 79\n",
     "<think> 183 - 104 = 79 </think><think> 183 - 104 = 79 </think><answer> 183 - 104 = 79 </answer>\"\"\"\n",
     "\n",
-    "wrong_result = \"\"\" ... </think><answer> 55 + 36 - 7 - 18 </answer>\"\"\"\n",
+    "wrong_result = \"\"\" ... </think>\n",
+    "\n",
+    "<answer> 55 + 36 - 7 - 18 </answer>\"\"\"\n",
     "\n",
     "\n",
     "test_rewards = format_reward_func(completions=[correct_sample_1, correct_sample_2, wrong_format, wrong_format_2, wrong_result], target=[\"65\", \"65\", \"65\", \"65\", \"65\"], nums=[[19, 36, 55, 7]] * 5)\n",
@@ -413,14 +434,14 @@
     "# num_processes is the number of GPUs you have - 1 as this will be used with vLLM for Generation. \n",
     "# The command below can be run on a Node with 4x H100 80GB[[[∂s\n",
     "!accelerate launch --num_processes 3 --multi_gpu scripts/run_r1_grpo.py --config receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml\n",
-    "# !accelerate launch --num_processes 3 --config_file configs/accelerate_configs/deepspeed_zero3.yaml scripts/run_r1_grpo.py --config receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml"
+    "!accelerate launch --num_processes 3 --config_file configs/accelerate_configs/deepspeed_zero3.yaml scripts/run_r1_grpo.py --config receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sbatch --job-name=r1_grpo_qwen_2.5_3b_deepseek_r1_countdown --nodes=1 launch.slurm receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml\n"
+    "sbatch --job-name=r1_grpo_qwen_2.5_3b_deepseek_r1_countdown launch.slurm receipes/grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml\n"
    ]
   },
   {
