--- a/training/mini-deepseek-r1-aha-grpo.ipynb
+++ b/training/mini-deepseek-r1-aha-grpo.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
     "           continue\n",
     "        \n",
     "        # Evaluate the equation with restricted globals and locals\n",
-    "        result = eval(equation, {\"__builtins__\": None}, {})\n",
+    "        result = eval(equation, {\"__builti'ns__\": None}, {})\n",
     "        # Check if the equation is correct and matches the ground truth\n",
     "        if abs(float(result) - float(gt)) < 1e-5:\n",
     "            rewards.append(1.0)\n",
@@ -278,18 +278,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "correct_sample_1 = \"\"\"We need to find an equation using the numbers 19, 36, 55, and 7\n",
     "exactly once, with basic arithmetic operations, that equals 65. One possible\n",
     "combination is 55 + 36 - 19 + 7... </think>\n",
-    "\n",
     "<answer> 55 + 36 - 7 - 19 </answer>\"\"\"\n",
     "\n",
     "correct_sample_2 = \"\"\" ... </think>\n",
-    "\n",
     "<answer> 55 + 36 - 7 - 19 </answer>\"\"\"\n",
     "\n",
     "wrong_format = \"\"\"User: Using the numbers [19, 36, 55, 7], create an equation that equals 65.\"\"\"\n",
@@ -301,7 +299,6 @@
     "<think> 183 - 104 = 79 </think><think> 183 - 104 = 79 </think><answer> 183 - 104 = 79 </answer>\"\"\"\n",
     "\n",
     "wrong_result = \"\"\" ... </think>\n",
-    "\n",
     "<answer> 55 + 36 - 7 - 18 </answer>\"\"\"\n",
     "\n",
     "\n",
@@ -575,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4,
   "vscode": {
