add open button

--- a/training/fine-tune-gemma-with-trl-qlora.ipynb
+++ b/training/fine-tune-gemma-with-trl-qlora.ipynb
@@ -7,6 +7,12 @@
    "source": [
     "# How to Fine-Tune LLMs in 2024 with TRL\n",
     "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/philschmid/deep-learning-pytorch-huggingface/blob/beef48ac9a12718d62fa6180eaa46ebac5d825f1/training/fine-tune-gemma-with-trl-qlora.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
+    "https://openincolab.com/\n",
+    "\n",
     "https://github.com/huggingface/agents-course/blob/main/notebooks/bonus-unit1/gemma-SFT-thinking-function_call.ipynb\n",
     "\n",
     "Large Language Models or LLMs have seen a lot of progress in the last year. We went from now ChatGPT competitor to a whole zoo of LLMs, including Meta AI's [Llama 3](https://huggingface.co/blog/llama31), Mistrals [Mistral](https://huggingface.co/mistralai/Mistral-7B-Instruct-v0.2) & [Mixtral](https://huggingface.co/mistralai/Mixtral-8x7B-Instruct-v0.1) models, TII [Falcon](https://huggingface.co/tiiuae/falcon-40b), and many more. \n",
